--- a/LearnToiOS-Lesson5/Base.lproj/Main.storyboard
+++ b/LearnToiOS-Lesson5/Base.lproj/Main.storyboard
@@ -136,7 +136,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rkF-RQ-OKB">
-                                <rect key="frame" x="0.0" y="64" width="375" height="279.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="319.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Gtl-xe-Ips">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
@@ -176,6 +176,13 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vO-Hj-vmV">
+                                        <rect key="frame" x="0.0" y="289.5" width="375" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <segue destination="Zab-fb-ki1" kind="show" id="5mQ-va-VKM"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -191,6 +198,7 @@
                     <connections>
                         <outlet property="avatarImageView" destination="3zL-kh-6ld" id="0DQ-bK-Z0b"/>
                         <outlet property="descriptionLabel" destination="a8k-3U-Cdt" id="tYW-Jg-uL9"/>
+                        <outlet property="gitHubButton" destination="8vO-Hj-vmV" id="xnY-u7-mPF"/>
                         <outlet property="sourceTypeLabel" destination="6t1-uI-r1K" id="h8u-7M-tBX"/>
                         <outlet property="titleLabel" destination="tDE-12-Pjn" id="N8f-O5-He6"/>
                         <outlet property="urlLabel" destination="jTn-bm-l7p" id="jhp-Tk-6fW"/>
@@ -261,6 +269,40 @@
                 </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3009" y="440"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="fa4-ug-zVc">
+            <objects>
+                <viewController id="Zab-fb-ki1" customClass="WebViewController" customModule="LearnToiOS_Lesson5" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pLO-dV-kfc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iC6-pq-AM6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iC6-pq-AM6" firstAttribute="top" secondItem="eaY-m0-7vo" secondAttribute="top" id="AW0-JL-bGX"/>
+                            <constraint firstItem="iC6-pq-AM6" firstAttribute="leading" secondItem="eaY-m0-7vo" secondAttribute="leading" id="PPm-N8-3EX"/>
+                            <constraint firstItem="eaY-m0-7vo" firstAttribute="trailing" secondItem="iC6-pq-AM6" secondAttribute="trailing" id="tET-Zg-BWi"/>
+                            <constraint firstItem="eaY-m0-7vo" firstAttribute="bottom" secondItem="iC6-pq-AM6" secondAttribute="bottom" id="uXs-1F-wJ4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eaY-m0-7vo"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="iC6-pq-AM6" id="5fs-0x-Z3l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7MT-ig-kTF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3009" y="1211"/>
         </scene>
         <!--Repos-->
         <scene sceneID="D8i-wH-lIz">
